Mise à jour du site

--- a/_sources/notebook/fonction_onde.ipynb
+++ b/_sources/notebook/fonction_onde.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "inappropriate-memorabilia",
+   "id": "every-connecticut",
    "metadata": {},
    "source": [
     "# Fonction d'onde\n",
@@ -15,8 +15,7 @@
     "La description des interférences nécessite un traitement ondulatoire (quand même!). L'idée a donc été d'associer à chaque particule une fonction dont le comportement peut être associé à celui d'une onde: on y trouvera donc __possiblement__  un terme de propagation et une amplitude et donc les caractéristiques d'une onde. Mais comme on va le voir, on pourra aussi avoir une interprétation de concepts corupusculaires.\n",
     "\n",
     "\n",
-    "````{admonition} Définition : Fonction d'onde\n",
-    ":class: tip\n",
+    "````{important} __Définition : Fonction d'onde__\n",
     "\n",
     "La connaissance de l'état d'un système donnée à un instant donné est entièrement contenu dans une fonction appelée fonction d'onde $\\Psi(M,t)$. Cette fonction doit posséder les caractéristiques suivantes (entre autre):\n",
     "\n",
@@ -37,8 +36,7 @@
     "Nous avons dit que la fonction d'onde définissait complètement les caractéristiques d'un système. Il convient maintenant de remonter à des grandeurs qu'on peut interprêter à notre échelle. Il ne s'agit pas ici de présenter complètement la théorie quantique (qui nécessite notamment une bonne connaissance d'algèbre linéaire) mais de présenter un point particulier: la notion de probabilité de présence.\n",
     "\n",
     "\n",
-    "````{admonition} Fondamental : Probabilité de présence\n",
-    ":class: attention\n",
+    "````{important} __Fondamental : Probabilité de présence__\n",
     "\n",
     "La probabilité dP de détecter une particule dans un petit volume $\\delta \\tau$ autour du point M à un instant t est donné par:\n",
     "\n",
@@ -74,8 +72,7 @@
     "\n",
     "### Fonction d'onde - Remarque\n",
     "\n",
-    "````{admonition} Attention : \n",
-    ":class: note\n",
+    "````{attention}\n",
     "\n",
     "C'est important de ne pas confondre la fonction d'onde associé à une particule (ou plus généralement à un système) et l'amplitude complexe d'une onde classique.\n",
     "\n",
@@ -125,8 +122,7 @@
     "\n",
     "### Quantification - Principe\n",
     "\n",
-    "````{admonition} Fondamental : Le phénomène de quantification\n",
-    ":class: attention\n",
+    "````{important} __Fondamental : Le phénomène de quantification__\n",
     "\n",
     "La quantification des états de la matière correspond au caractère quantifié des états accessible, c'est-à-dire que certaines caractéristiques (énergie, moment cinétique... ) ne peuvent prendre que des valeurs discrètes.\n",
     "````\n",
@@ -168,8 +164,7 @@
     "\n",
     "````\n",
     "\n",
-    "````{admonition} Fondamental : A retenir\n",
-    ":class: attention\n",
+    "````{important} __Fondamental : A retenir__\n",
     "\n",
     "On retiendra:\n",
     "\n",
@@ -225,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "muslim-spectacular",
+   "id": "stable-conversation",
    "metadata": {
     "tags": [
      "remove-input"
@@ -255,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "difficult-lying",
+   "id": "perceived-binary",
    "metadata": {},
    "source": [
     "__Influence de n moyen__"
@@ -264,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "boolean-alcohol",
+   "id": "meaningful-request",
    "metadata": {
     "tags": [
      "remove-input"
@@ -294,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sought-diving",
+   "id": "executed-anthropology",
    "metadata": {},
    "source": [
     "__Influence de $\\Delta n$ moyen__"
@@ -303,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "danish-charles",
+   "id": "egyptian-speaker",
    "metadata": {
     "tags": [
      "remove-input"
@@ -333,11 +328,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "closing-palmer",
+   "id": "unusual-olympus",
    "metadata": {},
    "source": [
-    "````{admonition} Fondamental : A retenir\n",
-    ":class: attention\n",
+    "````{important} __Fondamental : A retenir__\n",
     "\n",
     "On retiendra:\n",
     "\n",
@@ -349,14 +343,12 @@
     "\n",
     "### Quantification - Bilan\n",
     "\n",
-    "````{admonition} Fondamental : Généralisation (admise)\n",
-    ":class: attention\n",
+    "````{important} __Fondamental : Généralisation (admise)__\n",
     "\n",
     "Considérons un système $\\Sigma$ dont l'énergie potentielle est $E_p(x)$. On admet que lorsque des état liés peuvent exister, il s'établit alors une quantification des états liés: l'énergie de ces états ne peut prendre qu'une valeur discrète. L'exemple de puits carrés finis sera vus en seconde année (PC).\n",
     "````\n",
     "\n",
-    "````{admonition} Attention : \n",
-    ":class: note\n",
+    "````{attention}\n",
     "\n",
     "Nous parlons ici uniquement des états liés. Les états de diffusion  n'impose pas de condition de quantification.\n",
     "\n",
@@ -388,8 +380,7 @@
     "\n",
     "### Inégalités d'Heisenberg - Enoncé\n",
     "\n",
-    "````{admonition} Fondamental : Enoncé\n",
-    ":class: attention\n",
+    "````{important} __Fondamental : Enoncé__\n",
     "\n",
     "Considérons un système suivant une évolution unidimensionnelle suivant un axe x. On associe sa position à une grandeur $x$ et sa quantité de mouvement àune grandeur $p_x$. L'indétermination $\\Delta x$ sur la position x et l'indétermination $\\Delta p_x$ sur l'impulsion $p_x$ sont reliés par la relation:\n",
     "\n",
@@ -416,8 +407,9 @@
     "Le principe d'incertitude relie position et quantitié de mouvement suivant un axe particulier. Il y a la même relation entre $y$ et $p_y$ par exemple. Par contre, il n'y a pas de contrainte entre l'indétermination sur $x$ et sur $p_y$.\n",
     "````\n",
     "\n",
-    "````{admonition} Attention : Indétermination et incertitude\n",
-    ":class: note\n",
+    "````{attention}\n",
+    "__Indétermination et incertitude__\n",
+    "\n",
     "\n",
     "La notion d'indétermination est souvent rapprochée de la notion d'incertitude d'un point de vue expérimental (on parle d'ailleurs de principe d'incertitude et souvent dans nos estimations on assimilera l'indétermination à l'incertitude minimale possible) MAIS ATTENTION, ce n'est qu'une façon simplifiée de voir les choses car ce principe n'est pas simplement rattaché à l'expérience, il est beaucoup plus fondamental. D'une manière générale, il faut comprendre que la position comme la vitesse sont des observables reliées à la fonction d'onde (exemple: l'observation de la position est reliée la densité de probabilité). La fonction d'onde fluctue dans l'espace. On peut lui associer un écart-type qui quantifie ces fluctuations. Ces fluctuations sont intrinsèques au système et non reliées au principe de mesure.\n",
     "\n",
@@ -449,8 +441,7 @@
     "\n",
     "````\n",
     "\n",
-    "````{admonition} Fondamental : A retenir\n",
-    ":class: attention\n",
+    "````{important} __Fondamental : A retenir__\n",
     "\n",
     "On retiendra que les inégalités d'Heisenberg permettent d'expliquer simplement plusieurs effets quantiques. Mais attention, __il ne s'agit QUE d'estimation d'ordre de grandeur car ce ne sont pas de vrais calculs des indétermination.__ \n",
     "````\n",
@@ -468,8 +459,7 @@
     "\n",
     "````\n",
     "\n",
-    "````{admonition} Fondamental : \n",
-    ":class: attention\n",
+    "````{important} __Fondamental : __\n",
     "\n",
     "L'effet du principe d'indétermination est quasi-négligeable à l'échelle macroscopique mais peuvent devenir extrêmement important à l'échelle microscopique.\n",
     "````\n",
@@ -497,8 +487,7 @@
     "\n",
     "````\n",
     "\n",
-    "````{admonition} Attention : \n",
-    ":class: note\n",
+    "````{attention}\n",
     "\n",
     "Cette méthode de raisonnement est à savoir faire sur d'autres systèmes mais attention, il s'agit d'une étude en ordre de grandeur et le résultat trouvé à la fin ne pourrait être utilisé en tant que valeur minimale précise.\n",
     "````\n",
@@ -576,12 +565,12 @@
   },
   "source_map": [
    15,
-   231,
-   237,
-   240,
-   246,
-   249,
-   255
+   226,
+   232,
+   235,
+   241,
+   244,
+   250
   ]
  },
  "nbformat": 4,
