--- a/_sources/notebook/dualite.ipynb
+++ b/_sources/notebook/dualite.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "polar-suite",
+   "id": "collectible-being",
    "metadata": {},
    "source": [
     "# Dualité onde-corpuscule\n",
@@ -21,8 +21,7 @@
     "    * Atomes\n",
     "    * Lumière\n",
     "````\n",
-    "````{admonition} Fondamental : A retenir... \n",
-    ":class: attention\n",
+    "````{important} __Fondamental : A retenir... __\n",
     "\n",
     "On retiendra qu'en mécanique classique, les objets physiques sont soit des corpuscules, soit des ondes.\n",
     "\n",
@@ -41,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "alternate-bradley",
+   "id": "known-vatican",
    "metadata": {
     "tags": [
      "remove-input"
@@ -71,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "peaceful-vampire",
+   "id": "fleet-warner",
    "metadata": {},
    "source": [
     "````{admonition} Exercice \n",
@@ -92,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "distant-alliance",
+   "id": "muslim-landscape",
    "metadata": {
     "tags": [
      "remove-input"
@@ -122,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "identical-swimming",
+   "id": "valuable-survey",
    "metadata": {},
    "source": [
     "__Effet photoélectrique - Effet de seuil et intensité.__"
@@ -131,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "wired-belize",
+   "id": "governing-vintage",
    "metadata": {
     "tags": [
      "remove-input"
@@ -161,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "detailed-niagara",
+   "id": "cosmetic-cattle",
    "metadata": {},
    "source": [
     "__Effet photoélectrique - Influence du matériau.__"
@@ -170,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fuzzy-borough",
+   "id": "previous-headquarters",
    "metadata": {
     "tags": [
      "remove-input"
@@ -200,11 +199,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "endless-demand",
+   "id": "balanced-settlement",
    "metadata": {},
    "source": [
-    "````{admonition} Fondamental : Le photon\n",
-    ":class: attention\n",
+    "````{important} __Fondamental : Le photon__\n",
     "\n",
     "On retiendra que le modèle corpusculaire de la lumière décrit la décrit comme un ensemble de \"quantas de lumière\" appelée photons. Ces derniers ont les caractéristiques suivantes :\n",
     "\n",
@@ -228,8 +226,7 @@
     "1. En réalité, l'énergie des électrons était de 54eV. Expliquer les causes possibles de cet écart.\n",
     "````\n",
     "\n",
-    "````{admonition} Fondamental : Dualité onde-corpuscule de la matière.\n",
-    ":class: attention\n",
+    "````{important} __Fondamental : Dualité onde-corpuscule de la matière.__\n",
     "\n",
     "On retiendra que d'un point de vue quantique, on peut associer un caractère corpusculaire associé à une énergie E et une quantité de mouvement $\\overrightarrow{p}$ ET un caractère ondulatoire associé à une longueur d'onde $\\lambda$ (ou de vecteur d'onde ) et une fréquence $f$ (ou une pulsation $\\omega$). Les deux aspects de la particule sont reliées par la relation de de Broglie:\n",
     "\n",
@@ -259,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fiscal-future",
+   "id": "hungarian-qualification",
    "metadata": {
     "tags": [
      "remove-input"
@@ -289,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "focal-greensboro",
+   "id": "chinese-money",
    "metadata": {},
    "source": [
     "### Critères quantiques\n",
@@ -298,8 +295,7 @@
     "Nous avons évoqué le parallèle entre la mécanique classique-quantique et l'optique géométrique-ondulatoire. Ce parallèle est d'autant plus important qu'il va nous permettre de situer si les effets quantiques doivent nécessairement être pris en compte ou non. Rappelons par exemple que la loi de Dulong-Petit (approche classique) est largement valable à température ambiante. Elle ne l'est plus à basse température. Cela signifie que l'approche quantique n'est pas nécessaire à température ambiante, elle le devient à basse température.\n",
     "\n",
     "\n",
-    "````{admonition} Fondamental : Crtière sur la longueur d'onde\n",
-    ":class: attention\n",
+    "````{important} __Fondamental : Crtière sur la longueur d'onde__\n",
     "\n",
     "Par analogie avec l'approximation de l'optique géométrique, on peut considérer que l'approche de la mécanique classique reste valable tant que les dimensions du corps considéré sont grandes devant la longueur d'onde de de Broglie associé au système.\n",
     "````\n",
@@ -308,8 +304,7 @@
     "L'inconvénient du critère précédent est qu'il demande de comparer deux caractéristiques du corps. On peut chercher à se ramener à une comparaison avec une constante fondamentale (à l'image de la comparaison avec la célérité de la lumière pour décider d'un traitement relativiste). Ici, la constante fondamentale adaptée est __la constante de Planck__  $h$. En effet le critère sur la longueur d'onde peut se réécrire: $a >> \\lambda = \\frac{h}{p}$ soit $ap >> h$.\n",
     "\n",
     "\n",
-    "````{admonition} Fondamental : Critère sur l'action\n",
-    ":class: attention\n",
+    "````{important} __Fondamental : Critère sur l'action__\n",
     "\n",
     "Le traitement classique reste valable tant que l'action caractéristique $S$ du système est grande devant la constante de Planck.\n",
     "````\n",
@@ -381,16 +376,16 @@
   },
   "source_map": [
    15,
-   47,
-   53,
-   68,
-   74,
-   77,
-   83,
-   86,
-   92,
-   147,
-   153
+   46,
+   52,
+   67,
+   73,
+   76,
+   82,
+   85,
+   91,
+   144,
+   150
   ]
  },
  "nbformat": 4,
