--- a/_sources/notebook/dualite.ipynb
+++ b/_sources/notebook/dualite.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "collectible-being",
+   "id": "unlikely-supplier",
    "metadata": {},
    "source": [
     "# Dualité onde-corpuscule\n",
     "\n",
     "## Ondes et corpuscules en mécanique classique\n",
     "\n",
-    "````{admonition} Exercice \n",
+    "````{admonition} Bilan \n",
     ":class: attention\n",
     "\n",
     "On se propose ici de faire rapidement un bilan sur les concepts d'ondes et de corpuscule en mécanique classique.\n",
@@ -21,7 +21,7 @@
     "    * Atomes\n",
     "    * Lumière\n",
     "````\n",
-    "````{important} __Fondamental : A retenir... __\n",
+    "````{important} __A retenir...__\n",
     "\n",
     "On retiendra qu'en mécanique classique, les objets physiques sont soit des corpuscules, soit des ondes.\n",
     "\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "known-vatican",
+   "id": "together-asian",
    "metadata": {
     "tags": [
      "remove-input"
@@ -70,10 +70,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fleet-warner",
+   "id": "pursuant-casino",
    "metadata": {},
    "source": [
-    "````{admonition} Exercice \n",
+    "````{admonition} Analyse de l'expérience \n",
     ":class: attention\n",
     "\n",
     "1. Pourquoi les électrons ne peut aller sans éclairage de l'armature négative vers l'armature positive ? Traduire cela en traçant __l'allure__  de l'énergie potentielle des électrons d'une armature à l'autre .\n",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "muslim-landscape",
+   "id": "empirical-eating",
    "metadata": {
     "tags": [
      "remove-input"
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valuable-survey",
+   "id": "square-swaziland",
    "metadata": {},
    "source": [
     "__Effet photoélectrique - Effet de seuil et intensité.__"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "governing-vintage",
+   "id": "figured-gossip",
    "metadata": {
     "tags": [
      "remove-input"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cosmetic-cattle",
+   "id": "specific-guidance",
    "metadata": {},
    "source": [
     "__Effet photoélectrique - Influence du matériau.__"
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "previous-headquarters",
+   "id": "honest-bouquet",
    "metadata": {
     "tags": [
      "remove-input"
@@ -199,10 +199,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "balanced-settlement",
+   "id": "single-thriller",
    "metadata": {},
    "source": [
-    "````{important} __Fondamental : Le photon__\n",
+    "````{important} __Le photon__\n",
     "\n",
     "On retiendra que le modèle corpusculaire de la lumière décrit la décrit comme un ensemble de \"quantas de lumière\" appelée photons. Ces derniers ont les caractéristiques suivantes :\n",
     "\n",
@@ -214,7 +214,7 @@
     "\n",
     "### Diffraction et interférences de la matière\n",
     "\n",
-    "````{admonition} Exercice \n",
+    "````{admonition} Analyse d'expérience \n",
     ":class: attention\n",
     "\n",
     "En 1927 Thomson de son côté et Davisson et Gerner du leur réalisent un expérience de diffraction d'un faisceau d'électrons par une fente fine ou un cristal. Depuis, des expériences de diffraction pour des atomes et molécules ont été réalisées.\n",
@@ -226,17 +226,17 @@
     "1. En réalité, l'énergie des électrons était de 54eV. Expliquer les causes possibles de cet écart.\n",
     "````\n",
     "\n",
-    "````{important} __Fondamental : Dualité onde-corpuscule de la matière.__\n",
+    "````{important} __Dualité onde-corpuscule de la matière.__\n",
     "\n",
     "On retiendra que d'un point de vue quantique, on peut associer un caractère corpusculaire associé à une énergie E et une quantité de mouvement $\\overrightarrow{p}$ ET un caractère ondulatoire associé à une longueur d'onde $\\lambda$ (ou de vecteur d'onde ) et une fréquence $f$ (ou une pulsation $\\omega$). Les deux aspects de la particule sont reliées par la relation de de Broglie:\n",
     "\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "\\overrightarrow{p} = \\hbar \\overrightarrow{k} = \\frac{h}{\\lambda}\\overrightarrow{u}\n",
-    "\\end{equation}\n",
+    "$$\n",
     "où $\\overrightarrow{u}$ est la direction de propagation de la lumière.\n",
     "````\n",
     "\n",
-    "```{dropdown} Remarque : Longueur d'onde et masse\n",
+    "```{topic} Longueur d'onde et masse\n",
     "\n",
     "Dans le cas de particules matérielles, la quantité de mouvement s'écrit $\\overrightarrow{p} = m \\overrightarrow{v}$ donc plus la masse est grande, plus la longueur d'onde est faible. Comme on le verra avec les critères quantiques, cela rejoint l'idée que plus le système est gros, moins le traitement quantique est nécessaire.\n",
     "```\n",
@@ -245,7 +245,7 @@
     "\n",
     "### Interférences électrons à électrons.\n",
     "\n",
-    "````{admonition} Exercice \n",
+    "````{admonition} Analyse de l'expérience \n",
     ":class: attention\n",
     "\n",
     "Observer la vidéo suivante sur une expérience d'interférences électrons par électrons expliquer l'aspect dual de l'interprétation ondes-corpuscules de la matière.\n",
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "hungarian-qualification",
+   "id": "mediterranean-works",
    "metadata": {
     "tags": [
      "remove-input"
@@ -286,45 +286,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chinese-money",
+   "id": "lesbian-finger",
    "metadata": {},
    "source": [
     "### Critères quantiques\n",
     "\n",
-    "\n",
+    "````{topic} Introduction\n",
     "Nous avons évoqué le parallèle entre la mécanique classique-quantique et l'optique géométrique-ondulatoire. Ce parallèle est d'autant plus important qu'il va nous permettre de situer si les effets quantiques doivent nécessairement être pris en compte ou non. Rappelons par exemple que la loi de Dulong-Petit (approche classique) est largement valable à température ambiante. Elle ne l'est plus à basse température. Cela signifie que l'approche quantique n'est pas nécessaire à température ambiante, elle le devient à basse température.\n",
+    "````\n",
     "\n",
-    "\n",
-    "````{important} __Fondamental : Crtière sur la longueur d'onde__\n",
+    "````{important} __Crtière sur la longueur d'onde__\n",
     "\n",
     "Par analogie avec l'approximation de l'optique géométrique, on peut considérer que l'approche de la mécanique classique reste valable tant que les dimensions du corps considéré sont grandes devant la longueur d'onde de de Broglie associé au système.\n",
     "````\n",
     "\n",
-    "\n",
+    "````{topic} Inconvénient\n",
     "L'inconvénient du critère précédent est qu'il demande de comparer deux caractéristiques du corps. On peut chercher à se ramener à une comparaison avec une constante fondamentale (à l'image de la comparaison avec la célérité de la lumière pour décider d'un traitement relativiste). Ici, la constante fondamentale adaptée est __la constante de Planck__  $h$. En effet le critère sur la longueur d'onde peut se réécrire: $a >> \\lambda = \\frac{h}{p}$ soit $ap >> h$.\n",
+    "````\n",
     "\n",
+    "````{sidebar} Action d'un système\n",
+    "L'action est définie (pas à connaître) comme l'intégale temporelle de l'énergie.\n",
     "\n",
-    "````{important} __Fondamental : Critère sur l'action__\n",
+    "Le plus important est de savoir qu'elle a la dimension d'une position multipliée par une quantitée de mouvement, soit aussi celle d'un moment cinétique.\n",
+    "\n",
+    "Une _action carcatéristique_ est donc une grandeur caractéristique du système possédant la même dimension.\n",
+    "````\n",
+    "````{important} __Critère sur l'action__\n",
     "\n",
     "Le traitement classique reste valable tant que l'action caractéristique $S$ du système est grande devant la constante de Planck.\n",
     "````\n",
     "\n",
-    "### Utilisation du critère quantique\n",
+    "### Méthode - Utilisation du critère quantique\n",
     "\n",
     "````{admonition} Exercice \n",
     ":class: attention\n",
     "\n",
     "1. En utilisant le critère sur la longueur d'onde, expliquer pourquoi un homme qui marche ne nécessite pas un traitement quantique .\n",
     "1. En utilisant le critère sur l'action, justifier qu'une planète gravitant autour d'un Soleil ne nécessite pas un traitement quantique mais qu'un électron autour d'un noyau le nécessite.\n",
-    "\n",
-    "\n",
     "````\n",
     "\n",
-    "## Travaux dirigés\n",
+    "## Entrainement\n",
     "\n",
-    "### Ordres de grandeur\n",
-    "\n",
-    "````{admonition} Exercice \n",
+    "````{admonition} Ordres de grandeur \n",
     ":class: attention\n",
     "\n",
     "1. Estimer la quantité de photons reçus par seconde par une photo-cathode de surface $S = 1 \\rm{cm^{2}}$ exposée au rayonnement d'un lampe au sodium ($\\lambda = 589 \\rm{nm}$) ponctuelle émettant avec une puissance $P=15\\rm{W}$ à une distance $d=1\\rm{m}$ .\n",
@@ -334,9 +337,7 @@
     "1. Commenter la difficulté d'obtenir une éclairement \"un photon par un photon\".\n",
     "````\n",
     "\n",
-    "### Pression de radiation\n",
-    "\n",
-    "````{admonition} Exercice \n",
+    "````{admonition} Pression de radiation \n",
     ":class: attention\n",
     "\n",
     "Soit un faisceau monochromatique de puissance surfacique $P_S$ et de longueur d'onde $\\lambda$ se réfléchissant sur un miroir parfait avec un angle $\\theta$. Par un bilan de quantité de mouvement sur les photons, déterminer la pression (appelée pression de radiation) exercée par le faisceau lumineux sur le miroir. On supposera le milieu environnant assimilable au vide.\n",
