Mise à jour du site

--- a/_sources/notebook/fonction_onde.ipynb
+++ b/_sources/notebook/fonction_onde.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "comparative-choice",
+   "id": "amended-dimension",
    "metadata": {},
    "source": [
     "# Fonction d'onde\n",
@@ -77,7 +77,8 @@
     "````{topic} Analogie mathématique\n",
     "Rappelons d'abord les caractéristiques générale d'une onde:\n",
     "\n",
-    "* Elle peut se caractériser par une direction (instantanée) et une vitesse (instantanée) de propagation. __Pour simplifier, on pourra supposer une propagation rectiligne uniforme.__ * L'amplitude de l'onde peut se décomposer en somme d'ondes sinusoïdales (décomposition en série de Fourier) auxquelles on peut associer une fréquence $f$, une longueur d'onde $\\lambda$ ou directement un vecteur d'onde $\\overrightarrow{k} = \\frac{2 \\pi}{\\lambda} \\overrightarrow{u}$ où $\\overrightarrow{u}$ est la direction de propagation .\n",
+    "* Elle peut se caractériser par une direction (instantanée) et une vitesse (instantanée) de propagation. __Pour simplifier, on pourra supposer une propagation rectiligne uniforme.__\n",
+    "* L'amplitude de l'onde peut se décomposer en somme d'ondes sinusoïdales (décomposition en série de Fourier) auxquelles on peut associer une fréquence $f$, une longueur d'onde $\\lambda$ ou directement un vecteur d'onde $\\overrightarrow{k} = \\frac{2 \\pi}{\\lambda} \\overrightarrow{u}$ où $\\overrightarrow{u}$ est la direction de propagation .\n",
     "* Pour représenter une onde sinusoïdale, on peut utiliser sa représentation complexe $A(M,t) = A(M) e^{j (\\omega t - \\overrightarrow{k} \\cdot \\overrightarrow{OM})}$. Cette représentation complexe reste une représentation mathématique permettant des calculs plus aisés (notamment pour les interférence) mais le contenu physique n'est contenu QUE dans la partie réelle de cette représentation .\n",
     "* La superposition des ondes ne correspond pas nécessairement à un phénomène de propagation: citons en exemple les ondes stationnaires. On peut les décomposer en plusieurs ondes progressives mais la somme donne un effet où il n'y a plus de propagation de l'énergie.\n",
     "````\n",
@@ -203,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "comic-johns",
+   "id": "parental-garage",
    "metadata": {
     "tags": [
      "remove-input"
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impossible-blade",
+   "id": "weighted-series",
    "metadata": {},
    "source": [
     "__Influence de n moyen__"
@@ -242,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "beginning-interpretation",
+   "id": "charged-replication",
    "metadata": {
     "tags": [
      "remove-input"
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "empirical-agenda",
+   "id": "gothic-cocktail",
    "metadata": {},
    "source": [
     "__Influence de $\\Delta n$ moyen__"
@@ -281,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "damaged-functionality",
+   "id": "studied-boutique",
    "metadata": {
     "tags": [
      "remove-input"
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "included-occupation",
+   "id": "ignored-process",
    "metadata": {},
    "source": [
     "````{important} __A retenir__\n",
@@ -534,12 +535,12 @@
   },
   "source_map": [
    15,
-   209,
-   215,
-   218,
-   224,
-   227,
-   233
+   210,
+   216,
+   219,
+   225,
+   228,
+   234
   ]
  },
  "nbformat": 4,
