Mise à jour automatique

--- a/_sources/notebook/dualite.ipynb
+++ b/_sources/notebook/dualite.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "operational-syracuse",
+   "id": "72d1b866",
    "metadata": {},
    "source": [
     "# Dualité onde-corpuscule\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "weekly-jones",
+   "id": "fa4f7aa3",
    "metadata": {
     "tags": [
      "remove-input"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dense-adelaide",
+   "id": "68854455",
    "metadata": {},
    "source": [
     "````{admonition} Analyse de l'expérience \n",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "convenient-messenger",
+   "id": "0e1a38c6",
    "metadata": {
     "tags": [
      "remove-input"
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "executed-bones",
+   "id": "915ad0e7",
    "metadata": {},
    "source": [
     "__Effet photoélectrique - Effet de seuil et intensité.__"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "quantitative-completion",
+   "id": "d2bb8a78",
    "metadata": {
     "tags": [
      "remove-input"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proprietary-benjamin",
+   "id": "d3f97479",
    "metadata": {},
    "source": [
     "__Effet photoélectrique - Influence du matériau.__"
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "initial-bunch",
+   "id": "5e5abd2b",
    "metadata": {
     "tags": [
      "remove-input"
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "arbitrary-reservoir",
+   "id": "92ade85c",
    "metadata": {},
    "source": [
     "````{important} __Le photon__\n",
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "reduced-century",
+   "id": "c34ba6f6",
    "metadata": {
     "tags": [
      "remove-input"
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prescribed-aging",
+   "id": "05dacfa2",
    "metadata": {},
    "source": [
     "### Critères quantiques\n",
@@ -336,13 +336,18 @@
     "    * La longueur d'onde correspondant au maximum d'émission est reliée à la température du corps noir par la loi de déplacement de Wien: $\\lambda_{max} T = cste = 0.2898 \\rm{K.cm}$\n",
     "1. Commenter la difficulté d'obtenir une éclairement \"un photon par un photon\".\n",
     "````\n",
+    "_Point utile pour cet exercice_\n",
+    "* _$\\Longrightarrow$ Relation de Planck-Einstein._\n",
     "\n",
     "````{admonition} Pression de radiation \n",
     ":class: attention\n",
     "\n",
     "Soit un faisceau monochromatique de puissance surfacique $P_S$ et de longueur d'onde $\\lambda$ se réfléchissant sur un miroir parfait avec un angle $\\theta$. Par un bilan de quantité de mouvement sur les photons, déterminer la pression (appelée pression de radiation) exercée par le faisceau lumineux sur le miroir. On supposera le milieu environnant assimilable au vide.\n",
     "\n",
-    "````"
+    "````\n",
+    "_Point utile pour cet exercice_\n",
+    "* _$\\Longrightarrow$ Relation de Planck-Einstein._\n",
+    "* _$\\Longrightarrow$ Pression cinétique._"
    ]
   }
  ],
@@ -373,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.15"
   },
   "source_map": [
    15,
