--- a/_sources/notebook/fonction_onde.ipynb
+++ b/_sources/notebook/fonction_onde.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "amended-dimension",
+   "id": "e3f361fe",
    "metadata": {},
    "source": [
     "# Fonction d'onde\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "parental-garage",
+   "id": "bdef21ab",
    "metadata": {
     "tags": [
      "remove-input"
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "weighted-series",
+   "id": "a605c61a",
    "metadata": {},
    "source": [
     "__Influence de n moyen__"
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "charged-replication",
+   "id": "ac7b0bd0",
    "metadata": {
     "tags": [
      "remove-input"
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gothic-cocktail",
+   "id": "7d63d840",
    "metadata": {},
    "source": [
     "__Influence de $\\Delta n$ moyen__"
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "studied-boutique",
+   "id": "1f56de4d",
    "metadata": {
     "tags": [
      "remove-input"
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ignored-process",
+   "id": "a5371a16",
    "metadata": {},
    "source": [
     "````{important} __A retenir__\n",
@@ -474,6 +474,10 @@
     "\n",
     "\n",
     "````\n",
+    "_Point utile pour cet exercice_\n",
+    "* _$\\Longrightarrow$ Inégalités d'Heisenberg._\n",
+    "* _$\\Longrightarrow$ Energie mécanique._\n",
+    "* _$\\Longrightarrow$ Moment cinétique._\n",
     "\n",
     "### Etude de l'oscillateur harmonique\n",
     "\n",
@@ -500,7 +504,10 @@
     "\n",
     "```\n",
     "\n",
-    "````"
+    "````\n",
+    "_Point utile pour cet exercice_\n",
+    "* _$\\Longrightarrow$ Energie mécanique._\n",
+    "* _$\\Longrightarrow$ Oscillateur harmonique classique._"
    ]
   }
  ],
@@ -531,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.15"
   },
   "source_map": [
    15,
